--- a/notebooks/intern/LightningVisualization.ipynb
+++ b/notebooks/intern/LightningVisualization.ipynb
@@ -66,6 +66,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "18fbe579",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install leafmap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "49a20b44",
    "metadata": {},
    "outputs": [],
