Adding missing import

--- a/notebooks/intern/ALDN-Validation.ipynb
+++ b/notebooks/intern/ALDN-Validation.ipynb
@@ -44,6 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import pandas as pd\n",
     "import geopandas as gpd\n",
     "from huggingface_hub import snapshot_download\n",
